UI/UX improvements